tests/ui/const-generics/mgca/type_const-adt-expr-missing-field.stderr
error[E0573]: expected type, found constant `ADD1`
  --> $DIR/type_const-adt-expr-missing-field.rs:9:27
   |
LL | type const AliasFnUnused: ADD1 = ADD1::<{ Some::<usize> {} }>;
   |                           ^^^^ not a type

error: unconstrained generic constant
  --> $DIR/type_const-adt-expr-missing-field.rs:7:1
   |
LL | type const ADD1<const N : usize> : usize = const { N + 1 };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try adding a `where` bound
   |
LL | type const ADD1<const N : usize> : usize where [(); const { N + 1 }]: = const { N + 1 };
   |                                          ++++++++++++++++++++++++++++

error: struct expression with missing field initialiser for `0`
  --> $DIR/type_const-adt-expr-missing-field.rs:9:43
   |
LL | type const AliasFnUnused: ADD1 = ADD1::<{ Some::<usize> {} }>;
   |                                           ^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0573`.
